Ensure there is some spacing under the video player for all screen sizes

--- a/resources/css/panels.pcss
+++ b/resources/css/panels.pcss
@@ -39,7 +39,12 @@
 }
 
 @media screen and (min-width: 60em) {
+  .panels {
+    min-height: 100vh;
+  }
+
   .panel--right {
     margin-top: -45px;
+    min-height: 100%;
   }
 }
